--- a/src/_includes/partials/footer.ejs
+++ b/src/_includes/partials/footer.ejs
@@ -12,7 +12,7 @@
 
     </div>
 
-    <p>&copy; Copyrights Folio. All rights reserved.</p>
+    <p>&copy; Sanjeev Prasad. All rights reserved.</p>
 
     <div class="credits">
     <!--
@@ -21,7 +21,7 @@
     Licensing information: https://bootstrapmade.com/license/
     Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
     -->
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    Built using a template from <a href="https://bootstrapmade.com/">BootstrapMade</a>
     </div>
 
 </div>
