--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -70,7 +70,7 @@ p {
   color: #fff;
 }
 
-.btn {
+/* .btn {
   background: #333;
   border: medium none;
   border-radius: 0;
@@ -85,7 +85,7 @@ p {
 .btn:hover,
 .btn:focus {
   color: #fff;
-}
+} */
 
 .padDiv {
   padding: 30px 20px;
@@ -197,7 +197,7 @@ p {
   top: 0;
 }
 
-#header .logo {
+/* #header .logo {
   font-size: 30px;
   margin: 0;
   padding: 0;
@@ -210,7 +210,7 @@ p {
 
 #header .logo a {
   color: #898989;
-}
+} */
 
 #header .logo img {
   max-height: 40px;
@@ -250,7 +250,7 @@ p {
   align-items: center;
   justify-content: space-between;
   padding: 10px 0 10px 30px;
-  font-family: "Poppins", sans-serif;
+  /* font-family: "Poppins", sans-serif; */
   font-size: 14px;
   font-weight: 500;
   color: #7e7d7d;
