--- a/src/_includes/assets/css/_contact.scss
+++ b/src/_includes/assets/css/_contact.scss
@@ -1,3 +1,25 @@
 #contact{
     background-color: $secondaryColour;
+
+    h2 {
+        color: $mainColour;
+        text-transform: none;
+    }
+
+}
+
+.form-control {
+    text-transform: none;
+}
+
+form {
+    .btn-send {
+        background-color: $mutedColour;
+        border-radius: 0;
+        text-transform: uppercase;
+    }
+
+    .btn-send:hover {
+        background-color: $mainColour;
+    }
 }
