--- a/src/_includes/assets/css/_variables.scss
+++ b/src/_includes/assets/css/_variables.scss
@@ -3,10 +3,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 $backgroundColour: #feffef;
+$darkBackground: #1c3b3b;
+
 // $mainColour: #68d46e;
 $mainColour:  #e5ff50;
 $secondaryColour: #15202f;
 $mutedColour: #6c83a3;
+$sandColour: #b8a07e;
 
 $headingFont: 'Barlow Condensed', sans-serif;;
 $textFont: 'IBM Plex Mono', monospace;
