--- a/src/_includes/partials/contact.ejs
+++ b/src/_includes/partials/contact.ejs
@@ -7,7 +7,7 @@
               <div class="col-lg-6">
                 <div class="contact-contact">
   
-                  <h2 class="mb-30">GET IN TOUCH</h2>
+                  <h2 class="mb-30">Get in Touch</h2>
   
                   <ul class="contact-details">
                     <li><span>23 Main, Street</span></li>
@@ -25,25 +25,25 @@
   
                     <div class="col-lg-6">
                       <div class="form-group contact-block1">
-                        <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                        <input type="text" name="name" class="form-control" id="name" placeholder="YOUR NAME" required>
                       </div>
                     </div>
   
                     <div class="col-lg-6">
                       <div class="form-group">
-                        <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                        <input type="email" class="form-control" name="email" id="email" placeholder="YOUR EMAIL" required>
                       </div>
                     </div>
   
                     <div class="col-lg-12">
                       <div class="form-group">
-                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                        <input type="text" class="form-control" name="subject" id="subject" placeholder="SUBJECT" required>
                       </div>
                     </div>
   
                     <div class="col-lg-12">
                       <div class="form-group">
-                        <textarea class="form-control" name="message" placeholder="Message" required></textarea>
+                        <textarea class="form-control" name="message" placeholder="MESSAGE" required></textarea>
                       </div>
                     </div>
   
