--- a/src/_includes/project.ejs
+++ b/src/_includes/project.ejs
@@ -16,6 +16,9 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,500,500i,600,600i,700,700i,900,900i" rel="stylesheet">
 
+  <!-- FontAwesome -->
+  <script src="https://kit.fontawesome.com/c19be33044.js" crossorigin="anonymous"></script>
+
   <!-- Vendor CSS Files -->
   <link href="../../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="../../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -43,37 +46,19 @@
   <header id="header" class="">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <a href="/" class="logo"><img src="../../assets/img/logo.png" alt="" class="img-fluid"></a>
-      <!-- Uncomment below if you prefer to use an text logo -->
-      <!-- <h1 class="logo"><a href="index.html">Folio</a></h1> -->
+    <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
+    <!-- Uncomment below if you prefer to use an text logo -->
+    <h1 class="logo"><a href="/">Sanj!</a></h1>
 
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link active  scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link  scrollto" href="#journal">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+    <nav id="navbar" class="navbar">
+    <ul>
+        <li><a class="nav-link scrollto active" href="/#hero">Home</a></li>
+        <li><a class="nav-link scrollto" href="/#about">About</a></li>
+        <li><a class="nav-link  scrollto" href="/#portfolio">Portfolio</a></li>
+        <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
+    </ul>
+    <i class="bi bi-list mobile-nav-toggle"></i>
+    </nav><!-- .navbar -->
 
     </div>
   </header><!-- End Header -->
@@ -84,41 +69,49 @@
         <section id="portfolio-details" class="portfolio-details">
           <div class="container">
     
-            <div class="row gy-4">
-    
-              <div class="col-lg-8">
-                <div class="portfolio-details-slider swiper">
-                  <div class="swiper-wrapper align-items-center">
-
-                    <% for( let img of images ) { %>
-                      <div class="swiper-slide">
-                        <img src="<%= img %>" alt="">
-                      </div>
-                    <% } %>
-
-                  </div>
-                  <div class="swiper-pagination"></div>
-                </div>
+            <div class="row gy-4">           
+              
+              <!-- Project Banner / Video element -->
+              <div class="col-12 order-first">                
+                <% if (banner) { %>                  
+                    <img src="<%= banner %>" alt="" class="w-100">                  
+                <% } else if (video) { %>
+                  <video autoplay muted loop id="bannerVideo" class="w-100">
+                    <source src="<%= video %>" type="video/mp4">
+                  </video>               
+                <% } %>
               </div>
     
-              <div class="col-lg-4">
-                <div class="portfolio-info">
-                  <h3>Project information</h3>
-                  <ul>
-                    <% if (category) { %>
-                      <li><strong>Category</strong>: <%= category %></li>
-                    <% } %>
-                    <% if (client) { %>
-                      <li><strong>Client</strong>: <%= client %></li>
-                    <% } %>
-                    <% if (projectUrl) { %>
-                      <li><strong>Project URL</strong>: <a href="<%= projectUrl %>"><%= projectUrl %></a></li>
-                    <% } %>
-                  </ul>
+              <div class="col-lg-8 order-last order-lg-first">
+                <% for( let img of images ) { %>
+                  <img src="<%= img %>" alt="" class="w-100 pb-4">
+                <% } %>
+              </div>
+    
+              <div class="col-lg-4 order-first order-lg-last">
+                <div class="sticky-top" style="top: 2em">
+                  <div class="portfolio-info text-break">
+                    <h3>Project information</h3>
+                    <ul>
+                      <% if (category) { %>
+                        <li><strong>Category</strong>: <%= category %></li>
+                      <% } %>
+                      <% if (client) { %>
+                        <li><strong>Client</strong>: <%= client %></li>
+                      <% } %>
+                      <% if (yr) { %>
+                        <li><strong>Year</strong>: <%= yr %></li>
+                      <% } %>
+                      <% if (projectUrl) { %>
+                        <li><strong>Project URL</strong>: <a href="<%= projectUrl %>"><%= projectUrl %></a></li>
+                      <% } %>
+                    </ul>
+                  </div>
+                  <div class="portfolio-description px-2">
+                    <%- content %>
+                  </div>
                 </div>
-                <div class="portfolio-description">
-                  <%- content %>
-                </div>
+
               </div>
     
             </div>
