--- a/public/assets/css/_portfolio.scss
+++ b/public/assets/css/_portfolio.scss
@@ -2,6 +2,10 @@
     background-color: $darkBackground;
 }
 
+.filter-active {
+    color: $mainColour !important;
+}
+
 .section-title h2 {
     color: $mainColour;
     text-transform: none;
