--- a/src/_includes/project.ejs
+++ b/src/_includes/project.ejs
@@ -43,7 +43,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="">
+  <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
     <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
@@ -89,7 +89,7 @@
               </div>
     
               <div class="col-lg-4 order-first order-lg-last">
-                <div class="sticky-top" style="top: 2em">
+                <div class="sticky-top" style="top: 7em">
                   <div class="portfolio-info text-break">
                     <h3>Project information</h3>
                     <ul>
