--- a/src/_includes/partials/footer.ejs
+++ b/src/_includes/partials/footer.ejs
@@ -3,11 +3,10 @@
 <div class="container">
     <div class="socials-media text-center">
 
-    <ul class="list-unstyled">
-        <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-        <li><a href="#"><i class="bi bi-twitter"></i></a></li>
-        <li><a href="#"><i class="bi bi-instagram"></i></a></li>
-        <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+    <ul class="list-unstyled socials">
+        <li><a href="https://github.com/heySanj" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
+        <li><a href="https://dev.to/heysanj" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-dev"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/heysanj/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a></li>
     </ul>
 
     </div>
