--- a/src/_includes/partials/hero.ejs
+++ b/src/_includes/partials/hero.ejs
@@ -14,10 +14,9 @@
         <p>Full Stack Web Dev & Graphic Designer</p>
 
         <ul class="list-unstyled list-social">
-          <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="#"><i class="bi bi-twitter"></i></a></li>
-          <li><a href="#"><i class="bi bi-instagram"></i></a></li>
-          <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="https://github.com/heySanj" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
+          <li><a href="https://dev.to/heysanj" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-dev"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/heysanj/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a></li>
         </ul>
       </div>
     </div>
