--- a/src/_includes/partials/portfolio.ejs
+++ b/src/_includes/partials/portfolio.ejs
@@ -3,7 +3,7 @@
 
 <div class="container">
   <div class="section-title text-center">
-    <h2>Portfolio</h2>
+    <h2>Portfolio.</h2>
   </div>
 </div>
 
@@ -13,19 +13,17 @@
     <div class="col-lg-12 d-flex justify-content-center">
       <ul id="portfolio-flters">
         <li data-filter="*" class="filter-active">All</li>
-        <li data-filter=".filter-app">App</li>
-        <li data-filter=".filter-card">Card</li>
         <li data-filter=".filter-web">Web</li>
+        <li data-filter=".filter-game">Game</li>
+        <li data-filter=".filter-design">Design</li>
       </ul>
     </div>
   </div>
 
-  <div class="row portfolio-container">    
+  <div id="projectsContainer" class="row portfolio-container">    
 
 
-    <% const shuffledProjects = collections.projects.sort((a, b) => 0.5 - Math.random());
-    
-    for( let project of shuffledProjects) { %>
+    <% for( let project of collections.projects) { %>
       <div class="col-lg-4 col-md-6 portfolio-item filter-<%- project.data.category.toLowerCase() %>">
 
         <% if (project.data.bannerVideo) { %>
@@ -38,75 +36,19 @@
         <div class="portfolio-info">
           <h4><%= project.data.projectTitle %></h4>
           <p><%= project.data.category %></p>
-          <a href="<%= project.data.thumb %>" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="<%= project.data.projectTitle %>"><i class="bx bx-plus"></i></a>
-          <a href="<%= project.url %>" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+          <a href="<%= project.url %>" class="float-right">
+            <button type="button" class="btn btn-sm btn-outline-light">View</button>
+          </a>
         </div>
       </div>
     <% } %>
 
 
-    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-      <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-      <div class="portfolio-info">
-        <h4>App 1</h4>
-        <p>App</p>
-        <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-        <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-      </div>
-    </div>
-
-    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-      <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-      <div class="portfolio-info">
-        <h4>Web 3</h4>
-        <p>Web</p>
-        <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-        <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-      </div>
-    </div>
-
-    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-      <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-      <div class="portfolio-info">
-        <h4>App 2</h4>
-        <p>App</p>
-        <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-        <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-      </div>
-    </div>
-
-    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-      <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-      <div class="portfolio-info">
-        <h4>Card 2</h4>
-        <p>Card</p>
-        <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
-        <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-      </div>
-    </div>
-
-    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-      <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-      <div class="portfolio-info">
-        <h4>Web 2</h4>
-        <p>Web</p>
-        <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-        <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-      </div>
-    </div>
-
-    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-      <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-      <div class="portfolio-info">
-        <h4>App 3</h4>
-        <p>App</p>
-        <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
-        <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-      </div>
-    </div>
 
   </div>
 
 </div>
+
+<script src="assets/js/shuffleProjects.js"></script>
 
 </div><!-- End Portfolio Section -->
