--- a/src/_includes/assets/css/_skills.scss
+++ b/src/_includes/assets/css/_skills.scss
@@ -8,7 +8,7 @@
     display: grid;
     place-items: center;
     padding: 1em 3em;
-    border-radius: 0.5rem;
+    // border-radius: 0.5rem;
 
     img {
         padding: .5em 0;
