--- a/src/_includes/partials/contact.ejs
+++ b/src/_includes/partials/contact.ejs
@@ -7,7 +7,7 @@
               <div class="col-lg-6">
                 <div class="contact-contact">
   
-                  <h2 class="mb-30">Get in Touch</h2>
+                  <h2 class="mb-30">Get in Touch.</h2>
   
                   <ul class="contact-details">
                     <li><span>23 Main, Street</span></li>
@@ -20,7 +20,7 @@
               </div>
   
               <div class="col-lg-6">
-                <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                <form action="https://formspree.io/f/mzbwnbjn" method="POST" role="form" class="php-email-form">
                   <div class="row gy-3">
   
                     <div class="col-lg-6">
