--- a/public/assets/css/_project.scss
+++ b/public/assets/css/_project.scss
@@ -17,6 +17,14 @@
     a{
         color: $mainColour;
     }
+
+    .badge{
+        background-color: $mutedColour;
+        color: $backgroundColour;
+        font-weight: 300;
+        border-radius: 0;
+        margin: .3em 0;
+    }
 }
 
 .portfolio-description {
