--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -318,7 +318,7 @@ body {
   height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 body a {
   color: #e5ff50;
