--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -314,11 +314,6 @@ form .btn-send:hover {
 
 body {
   font-family: "IBM Plex Mono", monospace;
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  overflow-x: hidden;
 }
 body a {
   color: #e5ff50;
@@ -340,10 +335,12 @@ body .nav-link:hover {
 }
 
 #hero {
-  min-height: 100vh; /* fall-back */
-  min-height: -moz-available;
-  min-height: -webkit-fill-available;
-  min-height: fill-available;
+  min-height: 100vh;
+}
+@media only screen and (max-width: 640px) {
+  #hero {
+    min-height: 100%;
+  }
 }
 
 /* Style the video: 100% width and height to cover the entire window */
