--- a/src/_includes/assets/css/app.css
+++ b/src/_includes/assets/css/app.css
@@ -88,11 +88,10 @@
   overflow: hidden;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   gap: var(--gap);
-  -webkit-mask-image: linear-gradient(var(--mask-direction, to right), hsla(0deg, 0%, 0%, 0), hsl(0deg, 0%, 0%) 20%, hsl(0deg, 0%, 0%) 80%, hsla(0deg, 0%, 0%, 0));
-          mask-image: linear-gradient(var(--mask-direction, to right), hsla(0deg, 0%, 0%, 0), hsl(0deg, 0%, 0%) 20%, hsl(0deg, 0%, 0%) 80%, hsla(0deg, 0%, 0%, 0));
+  -webkit-mask-image: linear-gradient(var(--mask-direction, to right), hsla(0, 0%, 0%, 0), hsl(0, 0%, 0%) 20%, hsl(0, 0%, 0%) 80%, hsla(0, 0%, 0%, 0));
+          mask-image: linear-gradient(var(--mask-direction, to right), hsla(0, 0%, 0%, 0), hsl(0, 0%, 0%) 20%, hsl(0, 0%, 0%) 80%, hsla(0, 0%, 0%, 0));
 }
 
 .marquee__group {
@@ -102,29 +101,17 @@
   justify-content: space-around;
   gap: var(--gap);
   min-width: 100%;
-  -webkit-animation: scroll-x var(--duration) linear infinite;
-          animation: scroll-x var(--duration) linear infinite;
+  animation: scroll-x var(--duration) linear infinite;
 }
 
 @media (prefers-reduced-motion: reduce) {
   .marquee__group {
-    -webkit-animation-play-state: paused;
-            animation-play-state: paused;
+    animation-play-state: paused;
   }
 }
 .marquee--reverse .marquee__group {
   animation-direction: reverse;
-  -webkit-animation-delay: -3s;
-          animation-delay: -3s;
-}
-
-@-webkit-keyframes scroll-x {
-  from {
-    transform: translateX(var(--scroll-start));
-  }
-  to {
-    transform: translateX(var(--scroll-end));
-  }
+  animation-delay: -3s;
 }
 
 @keyframes scroll-x {
@@ -142,13 +129,6 @@
   gap: var(--gap);
   margin: auto;
   max-width: 100vw;
-}
-
-@-webkit-keyframes fade {
-  to {
-    opacity: 0;
-    visibility: hidden;
-  }
 }
 
 @keyframes fade {
@@ -236,6 +216,10 @@ form .btn-send {
 }
 form .btn-send:hover {
   background-color: #e5ff50;
+}
+
+.form-gotcha {
+  display: none;
 }
 
 #portfolio-details {
